<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/firstname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textCapWords"
        android:lines="1"
        android:backgroundTint="@color/gray"
        android:hint="@string/firstname"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastname_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords"
        android:lines="1"
        android:backgroundTint="@color/gray"
        android:hint="@string/lastname"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/firstname_et" />

    <TextView
        android:id="@+id/offline_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/offline"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/lastname_et" />

    <Switch
        android:id="@+id/offline_sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/offline_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>