<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_new_joke"
        android:textColor="@color/material_black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        app:layout_constraintTop_toBottomOf="@+id/title_tv">

        <EditText
            android:id="@+id/text_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="3"
            android:hint="Type joke text here"
            android:textColor="@color/material_black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/save_tv"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        android:textAllCaps="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_til" />

    <TextView
        android:id="@+id/cancel_tv"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        app:layout_constraintRight_toLeftOf="@id/save_tv"
        app:layout_constraintTop_toTopOf="@id/save_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>